# dev-env-debian

./: .gitignore  .gitpod.yml  README.md  index.html
.devcontainer/: Dockerfile  Makefile  QtLibraries.md  Qt_6.4.2_gcc_64_qml.md  README.md  Xvnc-session  dazzle.yaml  desktop-init.sh  devcontainer.json  dockerd-install-script.sh  gitpod-workspace-full-vnc.Dockerfile  gp-vncsession  tigervncserver
.devcontainer/Documentations/: BashStartup.md  DebianPackageCompilation.md  DockerOnGitpod.md  Gammaray.md  Github.md  QT_PlatformPlugins.md  Qt6Installation.md  QtOnlineInstallerInstallation.md  QtSources.md  Qt_6.4.2_gcc_64_qml.md  usr_lib_x86_64-linux-gnu_libQt.md  usr_lib_x86_64-linux-gnu_qt6_qml.md
.devcontainer/Qt_DotConfig/QtProject/: QtCreator.ini
.devcontainer/tool-dotnet/: Dockerfile
.devcontainer/usr_include_x86_64-linux-gnu_qt6/QtCore/: qconfig.h  qprocessordetection.h
.devcontainer/usr_include_x86_64-linux-gnu_qt6/QtGui/: qtgui-config.h
.devcontainer/usr_include_x86_64-linux-gnu_qt6/QtLabsAnimation/: qtlabsanimationexports.h  qtlabsanimationversion.h
.github/workflows/: BlazorWASMApp.yml  Qt6WASMApp.yml  build-devcontainer.yml  docker-image.yml
BlazorWASMApp/: BlazorWASMApp.styles.css  Program.cs  README.md  _Imports.razor  index.html
BlazorWASMApp/Properties/: launchSettings.json
BlazorWASMApp/Shared/: NavMenu.razor
BlazorWASMApp/_framework/: BlazorWASMApp.dll.br  blazor.boot.json  blazor.boot.json.br
BlazorWASMApp/wwwroot/: index.html
Qt6QuickApp/: CMakeLists.txt  CMakeLists.txt.user.b54549b  CMakeLists.txt.user.f92c310  main.qml
Qt6QuickApp-AOT/: CMakeLists.txt  main.qml
QtQuickUserInterfaceForm/: CMakeLists.txt  main.cpp  mainwindow.ui.qml  qml.qrc
QtQuickUserInterfaceForm/qml/: ProgressBar.ui.qml
QtWidgetUserInterfaceForm/: CMakeLists.txt  mainwindow.ui
build-Qt6QuickApp-Desktop-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  Qt6QuickApp  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-Qt6QuickApp-Desktop-Debug/.qt/: QtDeploySupport.cmake
build-Qt6QuickApp-Desktop-Debug/.qt_plugins/: Qt6_QmlPlugins_Imports_Qt6QuickApp.cmake  Qt6_QmlPlugins_Imports_Qt6QuickApp.rsp
build-Qt6QuickApp-Desktop-Debug/Qt6QuickApp_autogen/: deps  moc_predefs.h
build-Qt6QuickApp-WebAssembly-Debug/: CMakeCache.txt  Makefile  Qt6QuickApp.html  Qt6QuickApp.js  cmake_install.cmake
build-Qt6QuickApp-WebAssembly-Debug/.qt/: QtDeploySupport.cmake
build-Qt6QuickApp-WebAssembly-Debug/.qt_plugins/: Qt6_QmlPlugins_Imports_Qt6QuickApp.cmake  Qt6_QmlPlugins_Imports_Qt6QuickApp.rsp
build-Qt6QuickApp-WebAssembly-Debug/Qt6QuickApp_autogen/: moc_predefs.h
(+90 files in other folders)
